--- a/video/common/Makefile
+++ b/video/common/Makefile
@@ -19,9 +19,9 @@ ccflags-$(CONFIG_DRM_MRFLD) += \
 	-I$(INCDIR)/../../../include/drm \
 	-I$(INCDIR)/../../../include/drm/ttm
 
-ccflags-$(CONFIG_DRM_MRFLD) += -DANDROID -D_linux_ -DLINUX -D__KERNEL__  -DMERRIFIELD -DPSB_MSVDX_FW_LOADED_BY_HOST
+ccflags-$(CONFIG_DRM_MRFLD) += -DANDROID -D_linux_ -DLINUX -D__KERNEL__  -DMERRIFIELD
 ccflags-$(CONFIG_SUPPORT_VSP) += -DSUPPORT_VSP
-ccflags-$(CONFIG_DRM_VXD_BYT) := -Iinclude/drm -Iinclude/drm/ttm -Idrivers/gpu/drm/i915 -Idrivers/staging/intel_media/common/baytrail -Idrivers/staging/intel_media/video/common -Idrivers/staging/intel_media/video/decode -DPSB_MSVDX_FW_LOADED_BY_HOST
+ccflags-$(CONFIG_DRM_VXD_BYT) := -Iinclude/drm -Iinclude/drm/ttm -Idrivers/gpu/drm/i915 -Idrivers/staging/intel_media/common/baytrail -Idrivers/staging/intel_media/video/common -Idrivers/staging/intel_media/video/decode
 #VIDEO_COMMON_DIR = $(TOP_DIR)/driver/staging/intel_media/video/common
 #DECODE_DIR = $(TOP_DIR)/driver/staging/intel_media/video/decode
 
