--- a/graphics/dfrgx/Kbuild
+++ b/graphics/dfrgx/Kbuild
@@ -49,7 +49,6 @@ obj-$(CONFIG_GFX_RGX_DEVFREQ)	+= dfrgx.o
 
 dfrgx-y :=
 dfrgx-y += df_rgx.o
-## dfrgx-y += utilf.o
 
 my_warning_flags :=
 my_warning_flags += -Wall -fmessage-length=0 -Wunused-parameter
@@ -76,3 +75,4 @@ CFLAGS_df_rgx.o += -Idrivers/devfreq
 
 # Fixme: Replace the hardcoded path with something more intelligent approach
 CFLAGS_df_rgx.o += -I../modules/intel_media/display/tng/drv
+CFLAGS_df_rgx.o += -I../modules/intel_media/graphics/dfrgx
