[GRAPHICS/DEVFREQ]: devfreq not calling RGX when Power state is off.
BZ: 129262

devfreq will not interact with TNG when APM powers off RGX,
it will continue interaction once RGX device is again powered on.
If we do not prevent this behavior then kernel will crash
when trying to change frequency on RGX.

Change-Id: Ibcf3aaa7b9f989af975f39f2bdd92dc6103d0774
Signed-off-by: Javier Torres <javier.torres.castillo@intel.com>
Reviewed-on: http://android.intel.com:8080/125078
Reviewed-by: Woo, Insoo <insoo.woo@intel.com>
Reviewed-by: Patel, Hitesh K <hitesh.k.patel@intel.com>
Tested-by: Patel, Hitesh K <hitesh.k.patel@intel.com>
Reviewed-by: cactus <cactus@intel.com>
Tested-by: cactus <cactus@intel.com>

--- a/graphics/dfrgx/Kbuild
+++ b/graphics/dfrgx/Kbuild
@@ -49,6 +49,9 @@ obj-$(CONFIG_GFX_RGX_DEVFREQ)	+= dfrgx.o
 
 dfrgx-y :=
 dfrgx-y += df_rgx.o
+dfrgx-y += dev_freq_graphics_pm.o
+
+include ../modules/intel_media/graphics/dfrgx/dependencies/Makefile
 
 my_warning_flags :=
 my_warning_flags += -Wall -fmessage-length=0 -Wunused-parameter
@@ -74,5 +77,10 @@ ccflags-y += $(my_warning_flags)
 CFLAGS_df_rgx.o += -Idrivers/devfreq
 
 # Fixme: Replace the hardcoded path with something more intelligent approach
-CFLAGS_df_rgx.o += -I../modules/intel_media/display/tng/drv
-CFLAGS_df_rgx.o += -I../modules/intel_media/graphics/dfrgx
+CFLAGS_df_rgx.o += \
+	-I../modules/intel_media/display/tng/drv \
+	-I../modules/intel_media/graphics/dfrgx \
+	-I$(INCLUDES_RGX)
+
+CFLAGS_dev_freq_graphics_pm.o += -I$(INCLUDES_RGX)
+
