[GRAPHICS/DEVFREQ]: provide several characterization interfaces.
BZ: 131182

Provide force_state_override and get_available_states functions
to the thermal cooling device in order to provide flexibility during
device characterization.

Thermal team request: Throttle device should declare a mapping of throttle
units corresponding to level 0 to N (typical Max states is 4).
Currently state 0 => 320MHZ, 1 => 266MHZ, 2 =>213MHZ and 3 =>200MHZ.
Throttle device should have mechanism to allow override the above  mapping.

Change-Id: Ibb2f778f406df6f103e7481fa8af1f1220105748
Signed-off-by: Javier Torres <javier.torres.castillo@intel.com>
Signed-off-by: Yu(Alex) Dai <yu.dai@intel.com>
Reviewed-on: http://android.intel.com:8080/125769
Reviewed-by: cactus <cactus@intel.com>
Tested-by: cactus <cactus@intel.com>

--- a/graphics/dfrgx/Kbuild
+++ b/graphics/dfrgx/Kbuild
@@ -33,6 +33,13 @@ endif
 # MY_DEBUG - 1 to force compilation to include "-g".
 MY_DEBUG := 1
 
+# THERMAL_DEBUG for force_states and get_available_states sysfs entries
+THERMAL_DEBUG := 0
+
+ifeq ($(THERMAL_DEBUG),1)
+ccflags-y += -DTHERMAL_DEBUG
+endif
+
 # This makefile written for dir: drivers/staging/intel_media/graphics/dfrgx
 
 ifneq ($(MY_DEBUG),)
@@ -50,6 +57,7 @@ obj-$(CONFIG_GFX_RGX_DEVFREQ)	+= dfrgx.o
 dfrgx-y :=
 dfrgx-y += df_rgx.o
 dfrgx-y += dev_freq_graphics_pm.o
+dfrgx-y += df_rgx_utils.o
 
 include ../modules/intel_media/graphics/dfrgx/dependencies/Makefile
 
