MRFL GFX Kern 3.10 - Patches for enabling Graphics on MRFL
BZ: 125114

Patchset for supporting Kernel 3.10. There are some items that
are compiled out in the kern 3.10 for bring up. After the
patchset is merged, these items will be enable back in

Change-Id: I92254e00d035d5370cc2b0172d4d149841a0a206
Signed-off-by: Vinil Cheeramvelil <vinil.cheeramvelil@intel.com>
Signed-off-by: Yu(Alex) Dai <yu.dai@intel.com>
Reviewed-on: http://android.intel.com:8080/127803
Reviewed-by: cactus <cactus@intel.com>
Tested-by: cactus <cactus@intel.com>

--- a/Kconfig
+++ b/Kconfig
@@ -99,8 +99,8 @@ config MDFD_DUAL_MIPI
 
 config SUPPORT_HDMI
         bool "SUPPORT_HDMI"
-        depends on DRM_MDFLD || DRM_CTP || DRM_I915
-        default y
+        depends on DRM_MDFLD || DRM_CTP || DRM_I915 || DRM_MRFLD
+        default n
         help
           Choose this option to support HDMI.
 
@@ -113,8 +113,8 @@ config CTP_DPST
 
 config PVR_PROC
         bool "PVR_PROC"
-        depends on DRM_MDFLD || DRM_CTP
-        default n
+        depends on DRM_MDFLD || DRM_CTP || DRM_MRFLD
+        default y
         help
           Choose this option to support PVR proc debug interface.
 
@@ -326,30 +326,6 @@ config MID_DSI_DPU
 	default n
 	help
 	  xxxxxx
-
-config SUPPORT_HDMI
-        bool "SUPPORT_HDMI_DISPLAY"
-        depends on DRM_MDFLD || DRM_CTP || DRM_MRFLD
-        default n
-        help
-          xxxxxx
-
-config SUPPORT_MIPI_H8C7_VID_DISPLAY
-	bool "Support CMI panel on Merrifield"
-	depends on DRM_MRFLD
-	default n
-	help
-	  xxxxxx
-
-config SUPPORT_JDI_CMD_DISPLAY
-	bool "Support JDI CMD panel on Merrifield"
-	depends on DRM_MRFLD
-	default n
-	help
-		support for JDI command panel
-		xxxxxx
-		xxxxxx
-		xxxxxx
 
 config GFX_RTPM
 	bool "Enable GFX runtime_pm"
