[GRAPHICS/DEVFREQ]: dynamic turbo/burst implementation.
BZ: 131182

GPU DFRGX will burst/unburst the operational frequency
dynamically based on utilization metrics for active state.

Decision is made based on the following lower and higher
percentage limits for each frequency level.

Freq                threshold_low(%)   threshold_high(%)
DFRGX_FREQ_200_MHZ       0             95
DFRGX_FREQ_213_MHZ       85            95
DFRGX_FREQ_266_MHZ       80            95
DFRGX_FREQ_320_MHZ       83            95
DFRGX_FREQ_355_MHZ       90            95
DFRGX_FREQ_400_MHZ       88            95
DFRGX_FREQ_457_MHZ       87            95
DFRGX_FREQ_533_MHZ       85            95

Lower/upper freq level can be limited just updating the table
above.
Needs DDK1.2 for utilization metrics kernel API.

Change-Id: I7018872d8b2e015de22deff50647696d66729c14
Signed-off-by: Javier Torres <javier.torres.castillo@intel.com>
Signed-off-by: Yu(Alex) Dai <yu.dai@intel.com>
Reviewed-on: http://android.intel.com:8080/132113
Reviewed-by: Woo, Insoo <insoo.woo@intel.com>
Reviewed-by: cactus <cactus@intel.com>
Tested-by: cactus <cactus@intel.com>

--- a/graphics/dfrgx/Kbuild
+++ b/graphics/dfrgx/Kbuild
@@ -58,6 +58,7 @@ dfrgx-y :=
 dfrgx-y += df_rgx.o
 dfrgx-y += dev_freq_graphics_pm.o
 dfrgx-y += df_rgx_utils.o
+dfrgx-y += df_rgx_burst.o
 
 include ../modules/intel_media/graphics/dfrgx/dependencies/Makefile
 
@@ -91,4 +92,8 @@ CFLAGS_df_rgx.o += \
 	-I$(INCLUDES_RGX)
 
 CFLAGS_dev_freq_graphics_pm.o += -I$(INCLUDES_RGX)
+
+CFLAGS_df_rgx_burst.o += \
+	-I../modules/intel_media/display/tng/drv \
+	-I$(INCLUDES_RGX)
 
