[GRAPHICS/DEVFREQ]: Sysfs configurable entries added.
BZ: 140057

Added entries to enable/disable dynamic turbo and profiling
statistics, show profiling statistics.
If user requires to set a specific freq, then dynamic turbo must
be disabled first in order to see the fre level applied, otherwise
dynamic turbo will change the freq level based on utilization.
Additionally if there is a throttling request also the freq level
is change according to the thermal state provided, disabling
dynamic turbo automatically, dynamic turbo will remain disabled
until the user explicitely enable it again.
Description as follows:

Specific freq level:
echo 0 > sys/devices/platforms/dfrgx/dynamic_turbo_state
echo 400000 > sys/class/devfreq/dfrgx/max_freq

enable/disbale dynamic turbo , n = 0 (disbale) or 1 (enable):
echo n > sys/devices/platforms/dfrgx/dynamic_turbo_state

enable/disable profiling , n = 0 (disable) or 1 (enable):
echo n > sys/devices/platforms/dfrgx/profiling_state

show profiling statistics
cat sys/devices/platforms/dfrgx/profiling_show_stats

Change-Id: I3c7c64fe21bc6a430d299869c879d5a451a55b3b
Signed-off-by: Javier Torres <javier.torres.castillo@intel.com>
Reviewed-on: http://android.intel.com:8080/133237
Reviewed-by: Patel, Hitesh K <hitesh.k.patel@intel.com>
Tested-by: Patel, Hitesh K <hitesh.k.patel@intel.com>
Reviewed-by: cactus <cactus@intel.com>
Tested-by: cactus <cactus@intel.com>

--- a/graphics/dfrgx/Kbuild
+++ b/graphics/dfrgx/Kbuild
@@ -59,6 +59,7 @@ dfrgx-y += df_rgx.o
 dfrgx-y += dev_freq_graphics_pm.o
 dfrgx-y += df_rgx_utils.o
 dfrgx-y += df_rgx_burst.o
+dfrgx-y += dev_freq_attrib.o
 
 include ../modules/intel_media/graphics/dfrgx/dependencies/Makefile
 
