display/tng: Added sysfs based early suspend support
BZ: 149107

This implements the sysfs based PowerHAL interface that
depricates early suspend support that has been removed
from common.git/android-3.10.

Change-Id: Ibd7f01efc177d9d12261d14f9914cae6188f5600
Signed-off-by: Sathyanarayanan Kuppuswamy <sathyanarayanan.kuppuswamy@intel.com>

--- a/bld/merrifield/tng/Makefile
+++ b/bld/merrifield/tng/Makefile
@@ -116,7 +116,8 @@ $(DRIVER_NAME)-objs += \
 	$(DISPLAYDIR)/ospm/gfx_rtpm.o \
 	$(DISPLAYDIR)/ospm/dc_ospm.o \
 	$(DISPLAYDIR)/ospm/video_ospm.o \
-	$(DISPLAYDIR)/ospm/early_suspend.o
+	$(DISPLAYDIR)/ospm/early_suspend.o \
+	$(DISPLAYDIR)/ospm/early_suspend_sysfs.o
 
 ifeq ($(CONFIG_MOOREFIELD),y)
 $(DRIVER_NAME)-objs += \
