Revert "GFX: disabled native fence in kernel mode services"
BZ: 151360

This reverts commit 044bf23b4e09b49de5d7583e04ba56fe2a95f9d5.
native fence feature is disabled due to s0i3 issue in Bug
 145295. We should re-enable native fence for it is import
 feature in Android.

Conflicts:

	bld/merrifield/rgx/Makefile

Change-Id: Id7b5e48dd820c780564513a6bc8b144fb1e7362e
Signed-off-by: Nie Jun <jun.nie@intel.com>
Signed-off-by: Austin Hu <austin.hu@intel.com>

--- a/bld/merrifield/rgx/Makefile
+++ b/bld/merrifield/rgx/Makefile
@@ -102,6 +102,7 @@ ccflags-y += \
 	-DLMA \
 	-DPVR_LINUX_PYSMEM_MAX_POOL_PAGES=10240 \
 	-DPVR_MMAP_USE_VM_INSERT \
+	-DPVR_ANDROID_NATIVE_WINDOW_HAS_SYNC \
 	$(NULL)
 
 #	-DPVRSRV_ENABLE_FW_TRACE_DEBUGFS \
