intel_media: Replace "../modules/" with "drivers/external_drivers/"
BZ: 151240

Change-Id: I2e03d1f05890d4ede5007912292bbb6cd2d73097
Signed-off-by: Jarno Jakonen <jarno.jakonen@intel.com>

--- a/bld/clovertrail/sgx/Makefile
+++ b/bld/clovertrail/sgx/Makefile
@@ -11,12 +11,12 @@ BRIDGEDDIR=$(GFXDIR)/services4/srvkm/bridged
 SGXDIR=$(GFXDIR)/services4/srvkm/devices/sgx
 SYSCONFIGDIR=$(GFXDIR)/services4/system/intel_drm
 
-MEDIAINC=../modules/intel_media
+MEDIAINC=drivers/external_drivers/intel_media
 GFXINC=$(MEDIAINC)/graphics/sgx
 DISPLAYINC=$(MEDIAINC)/display/pnw/drv
 
 # Get definitions for PVRINCS-y and PVRDEFS-y
-include ../modules/intel_media/bld/clovertrail/pvrdefs.mk
+include drivers/external_drivers/intel_media/bld/clovertrail/pvrdefs.mk
 
 include_dirs := \
 	$(PVRINCS-y) \
