--- a/bld/hdmi_audio/Makefile
+++ b/bld/hdmi_audio/Makefile
@@ -3,7 +3,7 @@ DRIVER_NAME := hdmi_audio
 MEDIADIR=../..
 HDMI_AUDIO_SRC=$(MEDIADIR)/hdmi_audio
 
-MEDIAINC=../modules/intel_media
+MEDIAINC=drivers/external_drivers/intel_media
 PNWDISPLAYINC=$(MEDIAINC)/display/pnw/drv
 TNGDISPLAYINC=$(MEDIAINC)/display/tng/drv
 OTM_HDMI_INC=$(MEDIAINC)/otm_hdmi
