--- a/bld/baytrail/Makefile
+++ b/bld/baytrail/Makefile
@@ -7,7 +7,7 @@ BAYTRAILDIR=$(MEDIADIR)/common/baytrail
 VIDEOCOMDIR=$(MEDIADIR)/video/common
 VIDEODECDIR=$(MEDIADIR)/video/decode
 
-MEDIAINC=../modules/intel_media
+MEDIAINC=drivers/external_drivers/intel_media
 BAYTRAILINC=$(MEDIAINC)/common/baytrail
 VIDEOCOMINC=$(MEDIAINC)/video/common
 VIDEODECINC=$(MEDIAINC)/video/decode
