[GFX]: Power Monitor in gfx driver.
BZ: 151905

GFX driver and PUnit FW need to coordinate on when is
the right time to access RGX regs while performing
power monitoring, driver will set GFX_SSPM1[:23]in order
to let PUnit FW know that it is attempting to power off
however if GFX_SSPM1[:31] has been set then GFX driver
will monitor this bit 5 times in a 100 us interval
therefore if GFX_SSPM1[:31] is still set then power-off
will be aborted because PUnit FW is using the device then
GFX_SSPM1[:23] will be cleared.
If GFX_SSPM1[:31] is clear after setting GFX_SSPM1[:23]
then the GFX driver will power-off the device.
GFX driver will clear GFX_SSPM1[:23] once device is back on.

Change-Id: Id6256e928413315a6de6656c61018ec4291d1f7a
Signed-off-by: Javier Torres <javier.torres.castillo@intel.com>

--- a/bld/merrifield/rgx/Makefile
+++ b/bld/merrifield/rgx/Makefile
@@ -254,6 +254,10 @@ $(DRIVER_NAME)-y += \
 	$(RGXDIR)/services/server/devices/rgx/dfrgx_utilstats.o \
 	$(RGXDIR)/services/server/devices/rgx/dfrgx_interface.o
 
+# For Power Monitor
+$(DRIVER_NAME)-y += \
+	$(RGXDIR)/services/server/devices/rgx/rgxpowermon.o
+
 $(DRIVER_NAME)-y += \
 	$(RGXDIR)/generated/cmm_bridge/server_cmm_bridge.o \
 	$(RGXDIR)/generated/dc_bridge/server_dc_bridge.o \
