psb_drm.h header file consolidation
BZ: 152009

Consolidate multiple versions of psb_drm.h to one and move
it under interface folder.

change make files to include $(MEDIAINC)/interface

Change-Id: If4c1cbfe6cb04936704f902444fc2b2426d67a69
Signed-off-by: Andy Qiu <junhai.qiu@intel.com>

--- a/bld/baytrail/Makefile
+++ b/bld/baytrail/Makefile
@@ -16,6 +16,7 @@ include_dirs := \
 	-Iinclude/drm \
 	-Iinclude/drm/ttm \
 	-Idrivers/gpu/drm/i915 \
+        -I$(MEDIAINC)/interface \
 	-I$(BAYTRAILINC) \
 	-I$(VIDEOCOMINC) \
 	-I$(VIDEODECINC)
