--- a/bld/merrifield/rgx/Makefile
+++ b/bld/merrifield/rgx/Makefile
@@ -71,6 +71,23 @@ ccflags-y += \
 	-Idrivers/staging/android \
 	-Iarch/arm/include
 
+ifeq ($(CONFIG_GFX_RGX_BVNC),)
+# If not defined, default to Tangier/Merrifield
+CONFIG_GFX_RGX_BVNC := 1.76.4.6
+endif
+
+cgr_bvnc := $(subst ., ,$(CONFIG_GFX_RGX_BVNC))
+cgr_b := $(word 1, $(cgr_bvnc))
+cgr_v := $(word 2, $(cgr_bvnc))
+cgr_n := $(word 3, $(cgr_bvnc))
+cgr_c := $(word 4, $(cgr_bvnc))
+
+# Example: ccflags-y += -DRGX_BVNC_CORE_KM_HEADER="\"cores/rgxcore_km_1.76.4.6.h\""
+# Example: ccflags-y += -DRGX_BNC_CONFIG_KM_HEADER="\"configs/rgxconfig_km_1.V.4.4.h\""
+
+ccflags-y += -DRGX_BVNC_CORE_KM_HEADER="\"cores/rgxcore_km_$(CONFIG_GFX_RGX_BVNC).h\""
+ccflags-y += -DRGX_BNC_CONFIG_KM_HEADER="\"configs/rgxconfig_km_$(cgr_b).V.$(cgr_n).$(cgr_c).h\""
+
 ccflags-y += \
 	-DANDROID \
 	-DLINUX -D__linux__ -D__KERNEL__\
@@ -79,8 +96,6 @@ ccflags-y += \
 	-DPVR_LDM_DRIVER_REGISTRATION_NAME="\"pvrsrvkm\"" \
 	-DSUPPORT_RGX=1 \
 	-DPVR_SECURE_HANDLES \
-	-DRGX_BVNC_CORE_KM_HEADER="\"cores/rgxcore_km_1.76.4.6.h\"" \
-	-DRGX_BNC_CONFIG_KM_HEADER="\"configs/rgxconfig_km_1.V.4.6.h\"" \
 	-DDISPLAY_CONTROLLER=pvrlfb \
 	-DSUPPORT_RENDER_TARGET_ARRAYS \
 	-DSUPPORT_LINUX_X86_WRITECOMBINE \
