gfx-displayclass: display class driver changes for MOFD
BZ: 161970

This is part of a set of patches to enable graphics/display for
Moorefield.

Change-Id: I778ff339102beb70004aa304d33385a055a1f9f5
Signed-off-by: Jackie Li <yaodong.li@intel.com>

--- a/Kconfig
+++ b/Kconfig
@@ -381,6 +381,7 @@ config DRM_VXD_BYT
 config MOOREFIELD
 	bool "Build option for the Moorefield platform"
 	depends on DRM_INTEL_HANDSET
+	default n
 	help
 	  For the GFX block of TNG/ANN, its power islands' power on/off sequences are:
 	  1. Power on:  SLC_LDO -> SLC -> Sidekick -> Rascal/Dust;
