--- a/bld/merrifield/tng/Makefile
+++ b/bld/merrifield/tng/Makefile
@@ -110,7 +110,6 @@ $(DRIVER_NAME)-objs += \
 	$(DISPLAYDIR)/cmi_cmd.o \
 	$(DISPLAYDIR)/sharp5_cmd.o \
 	$(DISPLAYDIR)/sharp25x16_vid.o \
-	$(DISPLAYDIR)/dc_callbacks.o \
 	$(DISPLAYDIR)/ospm/pwr_mgmt.o \
 	$(DISPLAYDIR)/ospm/gfx_rtpm.o \
 	$(DISPLAYDIR)/ospm/dc_ospm.o \
@@ -119,10 +118,12 @@ $(DRIVER_NAME)-objs += \
 
 ifeq ($(CONFIG_MOOREFIELD),y)
 $(DRIVER_NAME)-objs += \
-	$(DISPLAYDIR)/ospm/gfx_ospm_ann.o
+	$(DISPLAYDIR)/ospm/gfx_ospm_ann.o \
+	$(DISPLAYDIR)/mofd_dc_callbacks.o
 else
 $(DRIVER_NAME)-objs += \
-	$(DISPLAYDIR)/ospm/gfx_ospm.o
+	$(DISPLAYDIR)/ospm/gfx_ospm.o \
+	$(DISPLAYDIR)/dc_callbacks.o
 endif
 
 ifeq ($(CONFIG_SUPPORT_HDMI),y)
