GFX - S0i1-Display/ MaxFifo Implementation
BZ: 147800

Kernel code where all the logic is in the Hardware composer.
This still does not program the Punit registers by default
Waiting for Punit changes to get to the mainline before
turning on by default

Change-Id: I5f83f9685fe499152de49ef4faea817572376fa1
Signed-off-by: Vinil Cheeramvelil <vinil.cheeramvelil@intel.com>

--- a/bld/merrifield/tng/Makefile
+++ b/bld/merrifield/tng/Makefile
@@ -115,6 +115,7 @@ $(DRIVER_NAME)-objs += \
 	$(DISPLAYDIR)/ospm/pwr_mgmt.o \
 	$(DISPLAYDIR)/ospm/gfx_rtpm.o \
 	$(DISPLAYDIR)/ospm/dc_ospm.o \
+	$(DISPLAYDIR)/ospm/dc_maxfifo.o \
 	$(DISPLAYDIR)/ospm/video_ospm.o \
 	$(DISPLAYDIR)/ospm/early_suspend.o \
 	$(DISPLAYDIR)/ospm/early_suspend_sysfs.o
