Enalbe PVR_DPF Log(KM).
BZ:167595

Enable some necessary log: FATAL, ERROR, WARMING.

Change-Id: Ic3fc68241f255ac7ffbfdee87d545894a3627a07
Signed-off-by: twu14 <tao.t.wu@intel.com>

--- a/bld/merrifield/rgx/Makefile
+++ b/bld/merrifield/rgx/Makefile
@@ -119,6 +119,7 @@ ccflags-y += \
 	-DPVR_LINUX_PYSMEM_MAX_POOL_PAGES=10240 \
 	-DPVR_MMAP_USE_VM_INSERT \
 	-DPVR_ANDROID_NATIVE_WINDOW_HAS_SYNC \
+	-DPVRSRV_NEED_PVR_DPF \
 	$(NULL)
 
 #	-DPVRSRV_ENABLE_FW_TRACE_DEBUGFS \
