--- a/bld/merrifield/rgx/Makefile
+++ b/bld/merrifield/rgx/Makefile
@@ -120,6 +120,7 @@ ccflags-y += \
 	-DPVR_MMAP_USE_VM_INSERT \
 	-DPVR_ANDROID_NATIVE_WINDOW_HAS_SYNC \
 	-DPVRSRV_NEED_PVR_DPF \
+	-DSUPPORT_SYSTEM_INTERRUPT_HANDLING \
 	$(NULL)
 
 #	-DPVRSRV_ENABLE_FW_TRACE_DEBUGFS \
