Enable HDMI HPD on Annidale PRh
BZ: 169357

Moorefield PRh uses PMIC GPIO0 to enable or disable HPD. Moorefield VV board
uses GPIO1 instead.

Change-Id: Iea25c5a70fe03810eed84a167ad08f76cf01a878
Signed-off-by: Andy Qiu <junhai.qiu@intel.com>

--- a/bld/merrifield/tng/Makefile
+++ b/bld/merrifield/tng/Makefile
@@ -151,8 +151,16 @@ $(DRIVER_NAME)-objs += \
 $(DRIVER_NAME)-objs += \
 	$(OTM_HDMI_SRC)/ipil/specific/mfld/ips_hdmi.o \
 	$(OTM_HDMI_SRC)/ipil/specific/mrfld/ips_hdcp.o \
-	$(OTM_HDMI_SRC)/ipil/specific/mrfld/ips_hdmi_priv.o \
+	$(OTM_HDMI_SRC)/ipil/specific/mrfld/ips_hdmi_priv.o
+
+ifeq ($(CONFIG_MOOREFIELD),y)
+$(DRIVER_NAME)-objs += \
+	$(OTM_HDMI_SRC)/pil/specific/mofd/ps_hdmi.o
+else
+$(DRIVER_NAME)-objs += \
 	$(OTM_HDMI_SRC)/pil/specific/mrfld/ps_hdmi.o
+endif
+
 endif
 
 $(DRIVER_NAME)-objs += \
