GFX-Display: Enabled Sharp 1080x1920 dual panels in the driver
BZ: 172862 172843

Change-Id: I98a99638ee4186cdc2dd2dcbac590b6d77682ef5
Signed-off-by: Faxing Lu <faxing.lu@intel.com>

--- a/bld/merrifield/tng/Makefile
+++ b/bld/merrifield/tng/Makefile
@@ -108,7 +108,7 @@ $(DRIVER_NAME)-objs += \
 	$(DISPLAYDIR)/jdi_cmd.o \
 	$(DISPLAYDIR)/cmi_vid.o \
 	$(DISPLAYDIR)/cmi_cmd.o \
-	$(DISPLAYDIR)/sharp5_cmd.o \
+	$(DISPLAYDIR)/sharp10x19_cmd.o \
 	$(DISPLAYDIR)/sharp25x16_vid.o \
 	$(DISPLAYDIR)/sharp25x16_cmd.o \
 	$(DISPLAYDIR)/jdi25x16_vid.o \
