Revert "MOFLD: OSPM: use the suggested power on/off sequence for VED/VEC/VSP"
BZ: 179876

This reverts commit f465a5f4e8f61cee4a608bc39188e894d0ee55c7.

Change-Id: I0196ca13bbbacf967b29e61352a4107aa64748c0
Signed-off-by: Jason Chen <jason.chen@intel.com>

--- a/bld/merrifield/tng/Makefile
+++ b/bld/merrifield/tng/Makefile
@@ -113,7 +113,6 @@ $(DRIVER_NAME)-objs += \
 	$(DISPLAYDIR)/sharp25x16_cmd.o \
 	$(DISPLAYDIR)/jdi25x16_vid.o \
 	$(DISPLAYDIR)/ospm/pwr_mgmt.o \
-	$(DISPLAYDIR)/ospm/gfx_ospm.o \
 	$(DISPLAYDIR)/ospm/gfx_rtpm.o \
 	$(DISPLAYDIR)/ospm/dc_ospm.o \
 	$(DISPLAYDIR)/ospm/dc_maxfifo.o \
@@ -123,9 +122,11 @@ $(DRIVER_NAME)-objs += \
 
 ifeq ($(CONFIG_MOOREFIELD),y)
 $(DRIVER_NAME)-objs += \
+	$(DISPLAYDIR)/ospm/gfx_ospm_ann.o \
 	$(DISPLAYDIR)/mofd_dc_callbacks.o
 else
 $(DRIVER_NAME)-objs += \
+	$(DISPLAYDIR)/ospm/gfx_ospm.o \
 	$(DISPLAYDIR)/dc_callbacks.o
 endif
 
