GFX_Display -- Enabled SDC16x25 command mode panel in the driver
BZ: 177283

Add panel driver functions for the SDC 16x25 inch panel.

Change-Id: Icbc4d2f26d7bacb81157b2eb2980248d2099e13e
Signed-off-by: Eckhart Koeppen <eckhart.koppen@intel.com>
Signed-off-by: Faxing Lu <faxing.lu@intel.com>

--- a/bld/merrifield/tng/Makefile
+++ b/bld/merrifield/tng/Makefile
@@ -111,6 +111,7 @@ $(DRIVER_NAME)-objs += \
 	$(DISPLAYDIR)/sharp10x19_cmd.o \
 	$(DISPLAYDIR)/sharp25x16_vid.o \
 	$(DISPLAYDIR)/sharp25x16_cmd.o \
+	$(DISPLAYDIR)/sdc16x25_8_cmd.o \
 	$(DISPLAYDIR)/jdi25x16_vid.o \
 	$(DISPLAYDIR)/ospm/pwr_mgmt.o \
 	$(DISPLAYDIR)/ospm/gfx_rtpm.o \
