Enhance dynamic video firmware loading for different spid
BZ: 183081

Video firmware needs to be signed for different product/hardware.
There is an implementation to dynamically load the firmware
according to SPID information. It can be enhanced to be more
generic.

/*
 * For a new product/device, if the device information is not in the spid2fw
 * table, driver will
 * 1) Firstly try to load firmware with the name like msvdx.bin.0004.0004.000d
 * 2) If there is no such firmware, driver will use the existing firmware from
 *    the closest device (usually with same family id or product id)
 * 3) Use the key from the closest device
 *
 * If above 1)/2) is failed, a new firmware is needed. For testing pupose without
 * driver change
 * 1) The new firmware must be with the name like msvdx.bin.0004.0004.000d
 * 2) If use other key, try to modify /sys/module/<driver module>/video_sepkey
 *
 * For the formal change, extend spid2fw table to include the device and firmware
 */

Change-Id: I58f66666409e345fcf5593ad3181505ae544af43
Signed-off-by: Yuan, Shengquan <shengquan.yuan@intel.com>

--- a/bld/merrifield/tng/Makefile
+++ b/bld/merrifield/tng/Makefile
@@ -167,6 +167,7 @@ endif
 $(DRIVER_NAME)-objs += \
 	$(VIDEO_COMMON_DIR)/psb_ttm_glue.o \
 	$(VIDEO_COMMON_DIR)/psb_cmdbuf.o \
+	$(VIDEO_COMMON_DIR)/tng_securefw.o \
 	$(VIDEO_COMMON_DIR)/psb_buffer.o \
 	$(VIDEO_COMMON_DIR)/psb_fence.o \
 	$(VIDEO_COMMON_DIR)/psb_mmu.o \
