Display: Func DCCBAvoidFlipInVblankInterval was undefined for MRFL
BZ: 198937

The patch to not update OVADD during the vblank period called
function DCCBAvoidFlipInVblankInterval unconditionally, but defined it
only for Moorefield.  Move the function definition (and associated code)
to a new file that is built for both MOFD and MRFL.

Change-Id: Ic749ea7ccb4e8eab25061c1493326cb1dcee6f43
Signed-off-by: Dale Stimson <dale.b.stimson@intel.com>

--- a/bld/merrifield/tng/Makefile
+++ b/bld/merrifield/tng/Makefile
@@ -124,6 +124,8 @@ $(DRIVER_NAME)-objs += \
 	$(DISPLAYDIR)/ospm/early_suspend.o \
 	$(DISPLAYDIR)/ospm/early_suspend_sysfs.o
 
+$(DRIVER_NAME)-objs += $(DISPLAYDIR)/cmn_dc_callbacks.o
+
 ifeq ($(CONFIG_MOOREFIELD),y)
 $(DRIVER_NAME)-objs += \
 	$(DISPLAYDIR)/ospm/gfx_ospm_ann.o \
