pass hdmi/hdcp status and bksv to chaabi
BZ: 198179

pass hdmi/hdcp status and bksv value to chaabi sep driver.

Change-Id: Ia927142ff4dbbb4161474de4bf4ffb7f64bf80d9
Signed-off-by: Andy Qiu <junhai.qiu@intel.com>

--- a/bld/merrifield/tng/Makefile
+++ b/bld/merrifield/tng/Makefile
@@ -57,7 +57,8 @@ ccflags-$(CONFIG_SUPPORT_HDMI) += \
 	-I$(OTM_HDMI_INC)/ipil/common \
 	-I$(OTM_HDMI_INC)/ipil/specific/include \
 	-I$(OTM_HDMI_INC)/pil/specific/mrfld \
-	-I$(OTM_HDMI_INC)/ipil/specific/mfld
+	-I$(OTM_HDMI_INC)/ipil/specific/mfld \
+	-Idrivers/staging/sep54
 
 #
 # Video ccflags
