GFX-Display: Enabled JDI25x16 command mode
BZ: 193881

Change-Id: I2bbc5ede09b50c826d35f4f71d34e65461c9949e
Signed-off-by: Faxing Lu <faxing.lu@intel.com>

--- a/bld/merrifield/tng/Makefile
+++ b/bld/merrifield/tng/Makefile
@@ -114,6 +114,7 @@ $(DRIVER_NAME)-objs += \
 	$(DISPLAYDIR)/sdc16x25_8_cmd.o \
 	$(DISPLAYDIR)/sdc25x16_cmd.o \
 	$(DISPLAYDIR)/jdi25x16_vid.o \
+	$(DISPLAYDIR)/jdi25x16_cmd.o \
 	$(DISPLAYDIR)/ospm/pwr_mgmt.o \
 	$(DISPLAYDIR)/ospm/gfx_rtpm.o \
 	$(DISPLAYDIR)/ospm/dc_ospm.o \
