Display: Add sysfs files to share display properties with userspace
BZ: 211434

Add drm sysfs directory "display" to provide display attributes
to userspace.

An expected path for this directory:
	/sys/class/drm/card0/display

The attributes added for this directory are:

panel_mode - One of "video", "command", or "unknown"

support_fbc - 1 if framebuffer compression supported, otherwise 0.

Change-Id: I2fa8ab4c84d76e76214aebf37b3c50c317b53239
Signed-off-by: Dale Stimson <dale.b.stimson@intel.com>

--- a/bld/merrifield/tng/Makefile
+++ b/bld/merrifield/tng/Makefile
@@ -100,6 +100,7 @@ $(DRIVER_NAME)-objs += \
 	$(DISPLAYDIR)/mdfld_dsi_esd.o \
 	$(DISPLAYDIR)/mdfld_dsi_dbi_dsr.o \
 	$(DISPLAYDIR)/dispmgrnl.o \
+	$(DISPLAYDIR)/dsp_sysfs_attrs.o \
 	$(DISPLAYDIR)/mdfld_dsi_pkg_sender.o \
 	$(DISPLAYDIR)/mrfld_clock.o \
 	$(DISPLAYDIR)/psb_irq.o \
