display: Add sysfs interface to set/get cabc mode
BZ: 217084

Add a sysfs interface to set and get the current cabc mode on the
primary display.  The path to the file is:

/sys/class/drm/card0/display/cabc_mode

Possible values that may be read from the file are:
	"off"
	"ui_image"
	"still_image"
	"moving_image"
	"unknown"

The same values (except "unknown") may be written to the file to change
the current cabc mode.

Examples:

$ echo still_image > /sys/class/drm/card0/display/cabc_mode
$ cat /sys/class/drm/card0/display/cabc_mode

Supported for these displays:
PNC_JDI_7x12       JDI 720x1280, command mode
PNV_JDI_7x12       JDI 720x1280, video mode
PNC_SHARP_10x19    Sharp 1080x1920, command mode
PNV_SHARP_10x19    Sharp 1080x1920, video mode

Note: sysfs file cabc_mode is writable to the world.  That is harmless,
but it may be desirable to remedy that before merging of this patch.

Derived (with substantial modification by Dale Stimson)
from https://android.intel.com/219422 which was authored by
wenleix.wang@intel.com .

Change-Id: I688eb3f80300fb9f36ceb3595b827c790ee3a578
Signed-off-by: Dale Stimson <dale.b.stimson@intel.com>

--- a/bld/merrifield/tng/Makefile
+++ b/bld/merrifield/tng/Makefile
@@ -106,6 +106,7 @@ $(DRIVER_NAME)-objs += \
 	$(DISPLAYDIR)/psb_irq.o \
 	$(DISPLAYDIR)/tng_wa.o \
 	$(DISPLAYDIR)/pmu_tng.o \
+	$(DISPLAYDIR)/cmn_cabc.o \
 	$(DISPLAYDIR)/jdi_vid.o \
 	$(DISPLAYDIR)/jdi_cmd.o \
 	$(DISPLAYDIR)/cmi_vid.o \
