--- a/bld/clovertrail/pnw/Makefile
+++ b/bld/clovertrail/pnw/Makefile
@@ -68,7 +68,6 @@ $(DRIVER_NAME)-objs += $(FBDEVDIR)/drmlfb_displayclass.o \
 	$(DISPLAYDIR)/mdfld_csc.o \
 	$(DISPLAYDIR)/psb_pvr_glue.o \
 	$(DISPLAYDIR)/mdfld_dsi_dbi.o \
-	$(DISPLAYDIR)/mdfld_dsi_dpi.o \
 	$(DISPLAYDIR)/mdfld_dsi_output.o \
 	$(DISPLAYDIR)/mdfld_output.o \
 	$(DISPLAYDIR)/auo_sc1_vid.o \
@@ -82,6 +81,13 @@ $(DRIVER_NAME)-objs += $(FBDEVDIR)/drmlfb_displayclass.o \
 	$(DISPLAYDIR)/tc35876x_vid.o \
 	$(DISPLAYDIR)/gi_renesas_cmd.o \
 	$(DISPLAYDIR)/mdfld_hdmi_audio.o \
+
+
+ifeq ($(CONFIG_SUPPORT_OTM8018B_MIPI_480X854_DISPLAY), y)
+$(DRIVER_NAME)-objs += $(DISPLAYDIR)/mdfld_dsi_dpi_pf450.o
+else
+$(DRIVER_NAME)-objs += $(DISPLAYDIR)/mdfld_dsi_dpi.o
+endif
 
 ifeq ($(CONFIG_MDFD_VIDEO_DECODE), y)
 $(DRIVER_NAME)-objs += $(ENCODE_DIR)/pnw_topaz.o \
@@ -128,6 +134,9 @@ $(DRIVER_NAME)-objs += $(DISPLAYDIR)/psb_dpst.o \
 	$(DISPLAYDIR)/dispmgrnl.o
 endif
 
+ifeq ($(CONFIG_SUPPORT_OTM8018B_MIPI_480X854_DISPLAY), y)
+$(DRIVER_NAME)-objs += $(DISPLAYDIR)/pf450cl_vid.o
+endif
 ifeq ($(CONFIG_SUPPORT_TMD_MIPI_600X1024_DISPLAY), y)
 $(DRIVER_NAME)-objs += $(DISPLAYDIR)/tmd_6x10_vid.o
 endif
