Revert "separate vxd392 from i915 driver"
This reverts commit 3b93c7fa4f5b6df2ae87657dc6b0a83958fcc990.
This reverts patch https://android.intel.com/#/c/247680/

Change-Id: If26fb16fe2918259ea1f6bdaf3aeb0e7ec198f0e
Tracked-On: https://jira01.devtools.intel.com/browse/IMINAN-3626
Signed-off-by: enrique gongora <enrique.gongora@intel.com>
Reviewed-on: https://android.intel.com:443/282589

--- a/common/baytrail/Makefile
+++ b/common/baytrail/Makefile
@@ -2,6 +2,6 @@
 # Direct Rendering Infrastructure (DRI) in XFree86 4.1.0 and higher.
 
 
-ccflags-$(CONFIG_DRM_VXD_BYT) := -Iinclude/drm -Iinclude/drm/ttm -Idrivers/staging/intel_media/common/baytrail -Idrivers/staging/intel_media/video/common -Idrivers/staging/intel_media/video/decode
+ccflags-$(CONFIG_DRM_VXD_BYT) := -Iinclude/drm -Iinclude/drm/ttm -Idrivers/gpu/drm/i915 -Idrivers/staging/intel_media/common/baytrail -Idrivers/staging/intel_media/video/common -Idrivers/staging/intel_media/video/decode
 
 obj-y += vxd_drv.o
