enable protected video playback in video stack for CTP in IMIN-Legacy
Change-Id: I6ffefbfd9d2ccf8b2ff23d8a6d35fb0313ece919
Tracked-On: https://jira01.devtools.intel.com/browse/IMINAN-8464
Signed-off-by: chen wen <wenx.chen@intel.com>
Reviewed-on: https://android.intel.com:443/298910

--- a/bld/clovertrail/pnw/Makefile
+++ b/bld/clovertrail/pnw/Makefile
@@ -51,6 +51,7 @@ ccflags-y += -DOTM_HDMI_UNIT_TEST
 #enable HDCP
 ccflags-y += -DOTM_HDMI_HDCP_ENABLE
 ccflags-y += -DCONFIG_VIDEO_MRFLD_EC
+ccflags-y += -DCONFIG_SLICE_HEADER_PARSING
 
 ccflags-y += $(include_dirs)
 
